# alphaBetaGamma

./: .gitignore  pyproject.toml
src/baseline_rag/: ingest.py  query.py
src/module_1/: generation.py  preprocess.py
src/module_2/: feature_extraction.py
src/module_3/: span_labeller.py
src/module_4/: embedding.py
src/module_5/: langgraph_graph_flow.py
src/prompts/: module_1_prompt.py
