[project]
name = "alphabetagamma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2",
    "chromadb>=1.3.5",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.0",
    "langgraph>=1.0.4",
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]

[tool.uv]
